--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.cache=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
-spring.datasource.password=lihonghe
+spring.datasource.password=root
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
@@ -26,13 +26,13 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logging.file=d:/work/data/nowcoder/community.log
 
 # MailProperties
-spring.mail.host=smtp.sina.com
-spring.mail.port=465
-spring.mail.username=nowcoder@sina.com
-spring.mail.password=nowcoder123
+spring.mail.host=smtp.163.com
+spring.mail.port=994
+spring.mail.username=15797894831@163.com
+spring.mail.password=XFPKRCFFRJNIPEEU
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.ssl.enable=true
 
 # community
 community.path.domain=http://localhost:8080
-community.path.upload=d:/work/data/upload
+community.path.upload=c:/lesson/data/upload
